--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Help Rikki Pay Her Legal Bills</title>
+    <title>We Keep Us Safe: Help keep lil A out of foster care</title>
     <meta http-equiv='Content-Type' content='text/html; charset=iso-8859-1'>
     <style>
         body {
