added a bunch of the rewards, not quite finished

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </head>
 <body id=container>
     <h1 class="box comic">
-        Help Rikki Pay Her Legal Bills
+        We Keep Us Safe: Keep lil A out of foster care!
     </h1>
     <div>
         Progress
@@ -94,21 +94,170 @@
     <h2 class="box comic">
         Prizes!!
     </h2>
-    <p>Donate to the fundraiser to claim a prize. Donations via the <a href="todo">GoFundMe</a> are not eligible for rewards due to GoFundMe's ToS.
+    <p>Donate to the fundraiser to claim a prize. You can <b><a href="https://secure.lawpay.com/pages/msorich/trust?reference=Rikki%20Hinz">donate directly via the lawyer's website </b></a>, or <a href="https://account.venmo.com/u/RikkiRachelle">venmo Rikki</a>.
     </p>
     <div class="reward box">
-        <h3>$100: A calendar from Cherlyn</h3>
+        <h3>$100: A 2023 calendar with beautiful landscape photos from Cherlyn</h3>
         <div class=reward-content>
             <img src="./imgs/cherlyn.jpg">
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$100+Cherlyn's+calendar"><img src="./tball.gif">claim reward</a>
         </div>
     </div>
     <div class="reward box">
-        <h3>$200: A small knit pig from Nastassia's mom</h3>
+        <h3>$200: A 2" knit pig (color of your choice) from Nastassia's mom</h3>
         <div class=reward-content>
             <img src="./imgs/sandy.png">
-            <p>Any color</p>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
+            <span id="$200 Nastassia's mom's knit pig"></span>
+        </div>
+    </div>
+    <div class="reward box">
+        <h3>$300: Will, a real geologist, will ID 5 rocks for you</h3>
+        <div class=reward-content>
+            <img src="./imgs/willl.jpeg">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
+            <span id="$200 Nastassia's mom's knit pig"></span>
+        </div>
+    </div>
+    <div class="reward box">
+        <h3>$300: Photography prints from Forrest</h3>
+        <div class=reward-content>
+            <img src="./imgs/forrest1.jpg">
+            <img src="./imgs/forrest2.jpg">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
+            <span id="$200 Nastassia's mom's knit pig"></span>
+        </div>
+    </div>
+    <div class="reward box">
+        <h3>$300: Landscape photo print of your choosing from Sarina</h3>
+        <div class=reward-content>
+            <img src="./imgs/sarina.jpg">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
+            <span id="$200 Nastassia's mom's knit pig"></span>
+        </div>
+    </div>
+    <div class="reward box">
+        <h3>$300: Elizabeth will give you a sweet haircut!</h3>
+        <div class=reward-content>
+            <img src="./imgs/elizabeth.png">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
+            <span id="$200 Nastassia's mom's knit pig"></span>
+        </div>
+    </div>
+    <div class="reward box">
+        <h3>$500: Will, a real geologist, will split open a rock for you</h3>
+        <div class=reward-content>
+            <img src="./imgs/willl.jpeg">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
+            <span id="$200 Nastassia's mom's knit pig"></span>
+        </div>
+    </div>
+    <div class="reward box">
+        <h3>$500: Alex, a real Mexican, will make and deliver you guacamole</h3>
+        <div class=reward-content>
+            <img src="./imgs/alex.jpg">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
+            <span id="$200 Nastassia's mom's knit pig"></span>
+        </div>
+    </div>
+    <div class="reward box">
+        <h3>$500: Philip will make you a deep dish pizza</h3>
+        <div class=reward-content>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
+            <span id="$200 Nastassia's mom's knit pig"></span>
+        </div>
+    </div>
+    <div class="reward box">
+        <h3>$700: A day near Ouray with Mal!</h3>
+        <div class=reward-content>
+            <img src="./imgs/mal.png">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
+            <p>If you can get yourself to Colorado, climb with Mal around Ouray, Colorado! In the summer and fall, that could look like climbing a 14'er, a technical 13'er, or cragging around town. Moab is just 2.5 hours away from Ouray, maybe spend a day crack climbing or developing trad climbing skills. In the winter, reliably January to March, come out and climb some ice!</p>
+            <span id="$200 Nastassia's mom's knit pig"></span>
+        </div>
+    </div>
+    <div class="reward box">
+        <h3>$750: One of Marla's paintings</h3>
+        <div class=reward-content>
+            <img src="./imgs/marla1.jpg">
+            <img src="./imgs/marla2.jpg">
+            <img src="./imgs/marla3.jpg">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
+            <span id="$200 Nastassia's mom's knit pig"></span>
+        </div>
+    </div>
+    <div class="reward box">
+        <h3>$750: Nastassia will spend 4 hours decluttering your space</h3>
+        <div class=reward-content>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
+            <p> I will also give your things away on buynothing.</p>
+            <span id="$200 Nastassia's mom's knit pig"></span>
+        </div>
+    </div>
+    <div class="reward box">
+        <h3>$750: A skate ski lesson from Madeline!</h3>
+        <div class=reward-content>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
+            <p> 2-3 hours, including pass and rentals</p>
+            <span id="$200 Nastassia's mom's knit pig"></span>
+        </div>
+    </div>
+    <div class="reward box">
+        <h3>$1000: Will, a real geologist, will give you a private geology tour of Tiger Mountain</h3>
+        <div class=reward-content>
+            <img src="./imgs/willl.jpeg">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
+            <span id="$200 Nastassia's mom's knit pig"></span>
+        </div>
+    </div>
+    <div class="reward box">
+        <h3>$2000: Spend the day with THE Alden Ryno</h3>
+        <div class=reward-content>
+            <img src="./imgs/alden.png">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
+            <p> Climbing, etc subject to his approval, less than 12 hours including travel time</p>
+            <span id="$200 Nastassia's mom's knit pig"></span>
+        </div>
+    </div>
+    <div class="reward box">
+        <h3>$2000: A miniature house sculpture painstakingly crafted by Ian</h3>
+        <div class=reward-content>
+            <img src="./imgs/alden.png">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
+            <span id="$200 Nastassia's mom's knit pig"></span>
+        </div>
+    </div>
+    <div class="reward box">
+        <h3>$2500: A hand knit squirrel house with squirrels, from Nastassia's mom</h3>
+        <div class=reward-content>
+            <img src="./imgs/sandy2.jpg">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
+            <span id="$200 Nastassia's mom's knit pig"></span>
+        </div>
+    </div>
+    <div class="reward box">
+        <h3>$3000: A day in the mountains with Climber Kyle</h3>
+        <div class=reward-content>
+            <img src="./imgs/kyle.jpg">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
+            <p> Climbing, etc subject to his approval, less than 12 hours including travel time</p>
+            <span id="$200 Nastassia's mom's knit pig"></span>
+        </div>
+    </div>
+    <div class="reward box">
+        <h3>$7000: Nastassia will paint your car/garage/wall in a psychedelic abstract style</h3>
+        <div class=reward-content>
+            <img src="./imgs/nastassia.png">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
+            <p>I guarantee children will love it and people on the street will smile at you</p>
+            <span id="$200 Nastassia's mom's knit pig"></span>
+        </div>
+    </div>
+    <div class="reward box">
+        <h3>$25,000: Rikki will tattoo your name on her ass</h3>
+        <div class=reward-content>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
+            <p>Upper left or right cheek corner, 3x1in max</p>
             <span id="$200 Nastassia's mom's knit pig"></span>
         </div>
     </div>
