added dumb gifs and the rewards titles/references/etc are all right now

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: "Times New Roman", Times, serif;
         }
         #container {
-            width: 780px;
+            width: 900px;
             min-height: 650px;
             display: block;
             margin: 0 auto;
@@ -78,7 +78,7 @@
 </head>
 <body id=container>
     <h1 class="box comic">
-        We Keep Us Safe: Keep lil A out of foster care!
+        ~*We Keep Us Safe: Keep lil A out of foster care!*~
     </h1>
     <div>
         Progress
@@ -91,16 +91,28 @@
         </div>
     </div>
 
+    <p><img src="star.gif"><a href="https://secure.lawpay.com/pages/msorich/trust?reference=Rikki%20Hinz"><img src="clickhere.gif"></a></p>
+
     <h2 class="box comic">
-        Prizes!!
+        <img src="cute1.gif"> Prizes!! <img src="cute2.gif">
     </h2>
-    <p>Donate to the fundraiser to claim a prize. You can <b><a href="https://secure.lawpay.com/pages/msorich/trust?reference=Rikki%20Hinz">donate directly via the lawyer's website </b></a>, or <a href="https://account.venmo.com/u/RikkiRachelle">venmo Rikki</a>.
+
+    </p><p>Donate to the fundraiser to claim a prize! You can <a href="https://secure.lawpay.com/pages/msorich/trust?reference=Rikki%20Hinz">donate directly via the lawyer's website</a>,<b> and please screenshot your donation for proof!</b> If you have already donated another way or have any questions, email us at xxxx.
     </p>
     <div class="reward box">
         <h3>$100: A 2023 calendar with beautiful landscape photos from Cherlyn</h3>
         <div class=reward-content>
             <img src="./imgs/cherlyn.jpg">
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$100+Cherlyn's+calendar"><img src="./tball.gif">claim reward</a>
+            <span id="$100 Cherlyn's calendar"></span>
+        </div>
+    </div>
+    <div class="reward box">
+        <h3>$100: 5 stickers of your choice from Nastassia </h3>
+        <div class=reward-content>
+            <img src="./imgs/nastassia2.png">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$100+Nastassia+stickers"><img src="./tball.gif">claim reward</a>
+            <span id="$100 Nastassia stickers"></span>
         </div>
     </div>
     <div class="reward box">
@@ -115,8 +127,8 @@
         <h3>$300: Will, a real geologist, will ID 5 rocks for you</h3>
         <div class=reward-content>
             <img src="./imgs/willl.jpeg">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
-            <span id="$200 Nastassia's mom's knit pig"></span>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$300+Will+rock+ID"><img src="./tball.gif">claim reward</a>
+            <span id="$300 Will rock ID"></span>
         </div>
     </div>
     <div class="reward box">
@@ -124,56 +136,64 @@
         <div class=reward-content>
             <img src="./imgs/forrest1.jpg">
             <img src="./imgs/forrest2.jpg">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
-            <span id="$200 Nastassia's mom's knit pig"></span>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$300+Forrest+print"><img src="./tball.gif">claim reward</a>
+            <span id="$300 Forrest print"></span>
         </div>
     </div>
     <div class="reward box">
         <h3>$300: Landscape photo print of your choosing from Sarina</h3>
         <div class=reward-content>
             <img src="./imgs/sarina.jpg">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
-            <span id="$200 Nastassia's mom's knit pig"></span>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$300+Sarina+print"><img src="./tball.gif">claim reward</a>
+            <span id="$300 Sarina print"></span>
+        </div>
+    </div>
+    <div class="reward box">
+        <h3>$300: Landscape photo print of your choosing from Cherlyn</h3>
+        <div class=reward-content>
+            <img src="./imgs/cherlyn.jpg">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$300+Cherlyn+print"><img src="./tball.gif">claim reward</a>
+            <span id="$300 Cherlyn print"></span>
         </div>
     </div>
     <div class="reward box">
         <h3>$300: Elizabeth will give you a sweet haircut!</h3>
         <div class=reward-content>
             <img src="./imgs/elizabeth.png">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
-            <span id="$200 Nastassia's mom's knit pig"></span>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$300+Elizabeth+haircut"><img src="./tball.gif">claim reward</a>
+            <span id="$300 Elizabeth haircut"></span>
         </div>
     </div>
     <div class="reward box">
         <h3>$500: Will, a real geologist, will split open a rock for you</h3>
         <div class=reward-content>
             <img src="./imgs/willl.jpeg">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
-            <span id="$200 Nastassia's mom's knit pig"></span>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$500+Will+rock+splitting"><img src="./tball.gif">claim reward</a>
+            <span id="$500 Will rock splitting"></span>
         </div>
     </div>
     <div class="reward box">
         <h3>$500: Alex, a real Mexican, will make and deliver you guacamole</h3>
         <div class=reward-content>
             <img src="./imgs/alex.jpg">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
-            <span id="$200 Nastassia's mom's knit pig"></span>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$500+Alex+guac"><img src="./tball.gif">claim reward</a>
+            <span id="$500 Alex guac"></span>
         </div>
     </div>
     <div class="reward box">
         <h3>$500: Philip will make you a deep dish pizza</h3>
         <div class=reward-content>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
-            <span id="$200 Nastassia's mom's knit pig"></span>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$500+Philip+pizza"><img src="./tball.gif">claim reward</a>
+            <span id="$500 Philip pizza"></span>
         </div>
     </div>
     <div class="reward box">
         <h3>$700: A day near Ouray with Mal!</h3>
         <div class=reward-content>
             <img src="./imgs/mal.png">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$700+Mal+times"><img src="./tball.gif">claim reward</a>
             <p>If you can get yourself to Colorado, climb with Mal around Ouray, Colorado! In the summer and fall, that could look like climbing a 14'er, a technical 13'er, or cragging around town. Moab is just 2.5 hours away from Ouray, maybe spend a day crack climbing or developing trad climbing skills. In the winter, reliably January to March, come out and climb some ice!</p>
-            <span id="$200 Nastassia's mom's knit pig"></span>
+            <span id="$700 Mal times"></span>
         </div>
     </div>
     <div class="reward box">
@@ -182,83 +202,84 @@
             <img src="./imgs/marla1.jpg">
             <img src="./imgs/marla2.jpg">
             <img src="./imgs/marla3.jpg">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
-            <span id="$200 Nastassia's mom's knit pig"></span>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$750+Marla+painting"><img src="./tball.gif">claim reward</a>
+            <span id="$750 Marla painting"></span>
         </div>
     </div>
     <div class="reward box">
         <h3>$750: Nastassia will spend 4 hours decluttering your space</h3>
         <div class=reward-content>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
-            <p> I will also give your things away on buynothing.</p>
-            <span id="$200 Nastassia's mom's knit pig"></span>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$750+Nastassia+cleaning"><img src="./tball.gif">claim reward</a>
+            <p> I will also give your things away on BuyNothing ;)</p>
+            <span id="$750 Nastassia cleaning"></span>
         </div>
     </div>
     <div class="reward box">
         <h3>$750: A skate ski lesson from Madeline!</h3>
         <div class=reward-content>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$750+Madeline+ski+lesson"><img src="./tball.gif">claim reward</a>
             <p> 2-3 hours, including pass and rentals</p>
-            <span id="$200 Nastassia's mom's knit pig"></span>
+            <span id="$750 Madeline ski lesson"></span>
         </div>
     </div>
     <div class="reward box">
         <h3>$1000: Will, a real geologist, will give you a private geology tour of Tiger Mountain</h3>
         <div class=reward-content>
             <img src="./imgs/willl.jpeg">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
-            <span id="$200 Nastassia's mom's knit pig"></span>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$1000+Will+geology+tour"><img src="./tball.gif">claim reward</a>
+            <span id="$1000 Will geology tour"></span>
         </div>
     </div>
     <div class="reward box">
         <h3>$2000: Spend the day with THE Alden Ryno</h3>
         <div class=reward-content>
             <img src="./imgs/alden.png">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$2000+day+with+Alden"><img src="./tball.gif">claim reward</a>
             <p> Climbing, etc subject to his approval, less than 12 hours including travel time</p>
-            <span id="$200 Nastassia's mom's knit pig"></span>
+            <span id="$2000 day with Alden"></span>
         </div>
     </div>
     <div class="reward box">
         <h3>$2000: A miniature house sculpture painstakingly crafted by Ian</h3>
         <div class=reward-content>
-            <img src="./imgs/alden.png">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
-            <span id="$200 Nastassia's mom's knit pig"></span>
+            <img src="./imgs/ian.jpg">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$2500+Ian's+house"><img src="./tball.gif">claim reward</a>
+            <span id="$2500 Ian's house"></span>
         </div>
     </div>
     <div class="reward box">
         <h3>$2500: A hand knit squirrel house with squirrels, from Nastassia's mom</h3>
         <div class=reward-content>
             <img src="./imgs/sandy2.jpg">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
-            <span id="$200 Nastassia's mom's knit pig"></span>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$2500+Nastassia's+mom+squirrel+house"><img src="./tball.gif">claim reward</a>
+            <span id="$2500 Nastassia's mom squirrel house"></span>
         </div>
     </div>
     <div class="reward box">
         <h3>$3000: A day in the mountains with Climber Kyle</h3>
         <div class=reward-content>
             <img src="./imgs/kyle.jpg">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$3000+Climber+Kyle"><img src="./tball.gif">claim reward</a>
             <p> Climbing, etc subject to his approval, less than 12 hours including travel time</p>
-            <span id="$200 Nastassia's mom's knit pig"></span>
+            <span id="$3000 Climber Kyle"></span>
         </div>
     </div>
     <div class="reward box">
         <h3>$7000: Nastassia will paint your car/garage/wall in a psychedelic abstract style</h3>
         <div class=reward-content>
             <img src="./imgs/nastassia.png">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$7000+Nastassia+car+painting"><img src="./tball.gif">claim reward</a>
             <p>I guarantee children will love it and people on the street will smile at you</p>
-            <span id="$200 Nastassia's mom's knit pig"></span>
+            <span id="$7000 Nastassia car painting"></span>
         </div>
     </div>
     <div class="reward box">
         <h3>$25,000: Rikki will tattoo your name on her ass</h3>
         <div class=reward-content>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$25000+Rikki+tattoo"><img src="./tball.gif">claim reward</a>
             <p>Upper left or right cheek corner, 3x1in max</p>
-            <span id="$200 Nastassia's mom's knit pig"></span>
+            <span id="$25000 Rikki tattoo"></span>
         </div>
     </div>
+    <img src="bigspinpent.gif"><img src="bigspinpent.gif"><img src="bigspinpent.gif"><img src="bigspinpent.gif"><img src="bigspinpent.gif"><img src="bigspinpent.gif"><img src="bigspinpent.gif"><img src="bigspinpent.gif"><img src="bigspinpent.gif"><img src="bigspinpent.gif"><img src="bigspinpent.gif"><img src="bigspinpent.gif"><img src="bigspinpent.gif">
 </body>
