--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
         <div class=reward-content>
             <img src="./imgs/willl.jpeg">
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$300+Will+rock+ID"><img src="./tball.gif">claim reward</a>
+            <p><a href="https://willhoover.weebly.com/">Real geologist website</a></p>
             <span id="$300 Will rock ID"></span>
         </div>
     </div>
@@ -145,6 +146,7 @@
         <div class=reward-content>
             <img src="./imgs/sarina.jpg">
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$300+Sarina+print"><img src="./tball.gif">claim reward</a>
+            <p>8x10" framed print, <a href="https://www.instagram.com/sarina_pizzala/">Sarina's work for examples</a></p>
             <span id="$300 Sarina print"></span>
         </div>
     </div>
@@ -153,6 +155,7 @@
         <div class=reward-content>
             <img src="./imgs/cherlyn.jpg">
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$300+Cherlyn+print"><img src="./tball.gif">claim reward</a>
+            <p>11x14" print in 16x20" mat, <a href="https://www.instagram.com/cherlynelizaphoto/">Cherlyn's work for examples</a></p>
             <span id="$300 Cherlyn print"></span>
         </div>
     </div>
@@ -161,6 +164,7 @@
         <div class=reward-content>
             <img src="./imgs/elizabeth.png">
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$300+Elizabeth+haircut"><img src="./tball.gif">claim reward</a>
+            <p><a href="https://www.instagram.com/tuftlove/">Haircut photos!</a></p>
             <span id="$300 Elizabeth haircut"></span>
         </div>
     </div>
@@ -169,6 +173,7 @@
         <div class=reward-content>
             <img src="./imgs/willl.jpeg">
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$500+Will+rock+splitting"><img src="./tball.gif">claim reward</a>
+            <p><a href="https://willhoover.weebly.com/">Real geologist website</a></p>
             <span id="$500 Will rock splitting"></span>
         </div>
     </div>
@@ -192,7 +197,7 @@
         <div class=reward-content>
             <img src="./imgs/mal.png">
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$700+Mal+times"><img src="./tball.gif">claim reward</a>
-            <p>If you can get yourself to Colorado, climb with Mal around Ouray, Colorado! In the summer and fall, that could look like climbing a 14'er, a technical 13'er, or cragging around town. Moab is just 2.5 hours away from Ouray, maybe spend a day crack climbing or developing trad climbing skills. In the winter, reliably January to March, come out and climb some ice!</p>
+            <p>If you can get yourself to Colorado, climb with <a href="https://www.instagram.com/malpinist/">Mal</a> around Ouray, Colorado! In the summer and fall, that could look like climbing a 14'er, a technical 13'er, or cragging around town. Moab is just 2.5 hours away from Ouray, maybe spend a day crack climbing or developing trad climbing skills. In the winter, reliably January to March, come out and climb some ice!</p>
             <span id="$700 Mal times"></span>
         </div>
     </div>
@@ -227,6 +232,7 @@
         <div class=reward-content>
             <img src="./imgs/willl.jpeg">
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$1000+Will+geology+tour"><img src="./tball.gif">claim reward</a>
+            <p><a href="https://willhoover.weebly.com/">Real geologist website</a></p>
             <span id="$1000 Will geology tour"></span>
         </div>
     </div>
@@ -235,7 +241,7 @@
         <div class=reward-content>
             <img src="./imgs/alden.png">
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$2000+day+with+Alden"><img src="./tball.gif">claim reward</a>
-            <p> Climbing, etc subject to his approval, less than 12 hours including travel time</p>
+            <p> Climbing, etc subject to <a href="https://www.instagram.com/alden_g_ryno/">Alden's</a> approval, less than 12 hours including travel time</p>
             <span id="$2000 day with Alden"></span>
         </div>
     </div>
@@ -252,6 +258,7 @@
         <div class=reward-content>
             <img src="./imgs/sandy2.jpg">
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$2500+Nastassia's+mom+squirrel+house"><img src="./tball.gif">claim reward</a>
+            <p>More photos of the house <a href="https://www.instagram.com/p/ChVefahJgcH/?igsh=N2dxYnZnbzEwZjdj">here!</a></p>
             <span id="$2500 Nastassia's mom squirrel house"></span>
         </div>
     </div>
@@ -260,7 +267,7 @@
         <div class=reward-content>
             <img src="./imgs/kyle.jpg">
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$3000+Climber+Kyle"><img src="./tball.gif">claim reward</a>
-            <p> Climbing, etc subject to his approval, less than 12 hours including travel time</p>
+            <p> Climbing, etc with <a href="https://climberkyle.com/">THE REAL CLIMBER KYLE</a> subject to his approval, less than 12 hours including travel time</p>
             <span id="$3000 Climber Kyle"></span>
         </div>
     </div>
@@ -281,5 +288,5 @@
             <span id="$25000 Rikki tattoo"></span>
         </div>
     </div>
-    <img src="bigspinpent.gif"><img src="bigspinpent.gif"><img src="bigspinpent.gif"><img src="bigspinpent.gif"><img src="bigspinpent.gif"><img src="bigspinpent.gif"><img src="bigspinpent.gif"><img src="bigspinpent.gif"><img src="bigspinpent.gif"><img src="bigspinpent.gif"><img src="bigspinpent.gif"><img src="bigspinpent.gif"><img src="bigspinpent.gif">
+    <img src="hkskipping.gif"><img src="hkskipping.gif"><img src="hkskipping.gif"><img src="hkskipping.gif"><img src="hkskipping.gif"><img src="hkskipping.gif"><img src="hkskipping.gif"><img src="hkskipping.gif">
 </body>
