--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         }
         .reward-content {
             display: flex;
+            justify-content: space-around;
         }
         .reward-content > img {
             height: 150px;
