Add more click here buttons

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
         .reward-content > img {
             height: 150px;
         }
+        .click-here-green {
+            height: 80px;
+        }
     </style>
     <!--<script src="https://unpkg.com/cursor-effects@latest/dist/browser.js"></script>-->
     <script>
@@ -142,6 +145,7 @@
             <span id="$300 Forrest print"></span>
         </div>
     </div>
+    <p><img src="star.gif"><a href="https://secure.lawpay.com/pages/msorich/trust?reference=Rikki%20Hinz"><img class="click-here-green" src="click_here_green.gif"></a></p>
     <div class="reward box">
         <h3>$300: Landscape photo print of your choosing from Sarina</h3>
         <div class=reward-content>
@@ -202,6 +206,7 @@
             <span id="$700 Mal times"></span>
         </div>
     </div>
+    <p><img src="star.gif"><a href="https://secure.lawpay.com/pages/msorich/trust?reference=Rikki%20Hinz"><img src="clickhere.gif"></a></p>
     <div class="reward box">
         <h3>$750: One of Marla's paintings</h3>
         <div class=reward-content>
@@ -281,6 +286,7 @@
             <span id="$7000 Nastassia car painting"></span>
         </div>
     </div>
+    <p><img src="star.gif"><a href="https://secure.lawpay.com/pages/msorich/trust?reference=Rikki%20Hinz"><img class="click-here-green" src="click_here_green.gif"></a></p>
     <div class="reward box">
         <h3>$25,000: Rikki will tattoo your name on her ass</h3>
         <div class=reward-content>
