--- a/index.html
+++ b/index.html
@@ -193,7 +193,9 @@
     <div class="reward box">
         <h3>$500: Philip will make you a deep dish pizza</h3>
         <div class=reward-content>
+            <img src="./imgs/philip.jpg">
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$500+Philip+pizza"><img src="./tball.gif">claim reward</a>
+            <p>Any toppings you want</p>
             <span id="$500 Philip pizza"></span>
         </div>
     </div>
